--- a/test_method/cac.yaml
+++ b/test_method/cac.yaml
@@ -1,29 +1,78 @@
 add:
   datas:
-    - - 1
-      - 1
-      - 1
-    - - 100
-      - 100
-      - 200
-    - [ 0.1,0.4,0.5 ]
-    - [ 0.01,0.05,0.06 ]
-    - [ -1,-1,-1 ]
+    - [ 1,2,3 ]
+    - [ -1,-2,-3 ]
+    - [ 0.1,0.2,0.3 ]
+    - [ -0.5,1,0.5 ]
+    - [ 1,-3,-2 ]
+    - ["",10,"请输入正确数字"]
+    - ["%￥#",10,"请输入正确数字"]
+    - ["你好",10,"请输入正确数字"]
+    - ["svgd",10,"请输入正确数字"]
   myid:
-    - 'int'
-    - 'bigint'
-    - 'float'
-    - 'lo'
-    - 'error'
+    - '正整数'
+    - '负数'
+    - '小数'
+    - '正负数'
+    - '正负数1'
+    - '空格'
+    - '特殊字符'
+    - '汉字'
+    - '英文'
 
 div:
   divss:
-    - - 100
-      - 2
-      - 50
-    - - 5000
-      - 100
-      - 50
     - [ 1,1,2 ]
-    - [ 5,3,5 ]
-    - [ 555,5,111 ]
+    - [ 525,2.5,210 ]
+    - ["",10,"请输入正确数字"]
+    - ["%￥#",10,"请输入正确数字"]
+    - ["你好",10,"请输入正确数字"]
+    - ["svgd",10,"请输入正确数字"]
+  divid:
+    - '正数'
+    - '小数'
+    - '空格'
+    - '特殊字符'
+    - '汉字'
+    - '英文'
+
+
+
+sub:
+  subb:
+    - [100,50,50]
+    - [-50,-50,-100]
+    - [55.6,0.6,55]
+    - ["",10,"请输入正确数字"]
+    - ["%￥#",10,"请输入正确数字"]
+    - ["你好",10,"请输入正确数字"]
+    - ["svgd",10,"请输入正确数字"]
+  subid:
+    - '正数'
+    - '负数'
+    - '小数'
+    - '空格'
+    - '特殊字符'
+    - '汉字'
+    - '英文'
+
+mul:
+  mulll:
+    - [2,5,10]
+    - [0.1,0.9,0.09]
+    - [99,999,98901]
+    - [-0.9,10,-9]
+    - '空格'
+    - '特殊字符'
+    - '汉字'
+    - '英文'
+  mullid:
+    - '正数'
+    - '小数'
+    - '整数'
+    - '负数'
+    - '空格'
+    - '特殊字符'
+    - '汉字'
+    - '英文'
+
